--- a/buttons.html
+++ b/buttons.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="container">
-        <h1 id="heading" class="text-center">Selection</h1>
+        <h1 id="heading" class="text-center">Color Checker</h1>
         <div class="row justify-content-md-center">
             <div class="col-md-4">
                 <div class="form-group">
